[#3459] feat: `MessageStream` - add `peek` method tests